--- a/views/home.hbs
+++ b/views/home.hbs
@@ -388,210 +388,210 @@
 <br><br>
 
 
-  <!-- Event Schedule -->
-  <div id="schedule" class="section" style="background-color: whitesmoke;">
-    <!-- container -->
-    <div class="container">
-      <!-- row -->
-      <div class="row">
-        <!-- section title -->
-        <div class="section-title">
-          <h3 class="title"><span style="color: #bd0c0e;">Schedule</span></h3>
-        </div>
-        <!-- /section title -->
+  <!--[> Event Schedule <]-->
+  <!--<div id="schedule" class="section" style="background-color: whitesmoke;">-->
+    <!--[> container <]-->
+    <!--<div class="container">-->
+      <!--[> row <]-->
+      <!--<div class="row">-->
+        <!--[> section title <]-->
+        <!--<div class="section-title">-->
+          <!--<h3 class="title"><span style="color: #bd0c0e;">Schedule</span></h3>-->
+        <!--</div>-->
+        <!--[> /section title <]-->
 
-        <div class="col-md-8 col-md-offset-2">
+        <!--<div class="col-md-8 col-md-offset-2">-->
 
-          <div class="events-wrapper">
-            <!-- event -->
-            <div class="event">
-              <div class="event-day">
-                <div>
-                  <span class="day">18</span>
-                  <span class="year">Jan, 2020</span>
-                </div>
-              </div>
-              <div class="event-content">
-                <p class="event-time"><i class="fa fa-clock-o"></i> 8 : 00 AM</p>
-                <h3 class="event-title">Check-in</h3>
-                <p>Arrive at the location with your valid college ID Card and a printout of the acceptance form. All
-                  the participants need to arrive latest by 10 AM.</p>
-              </div>
-            </div>
-            <!-- /event -->
+          <!--<div class="events-wrapper">-->
+            <!--[> event <]-->
+            <!--<div class="event">-->
+              <!--<div class="event-day">-->
+                <!--<div>-->
+                  <!--<span class="day">18</span>-->
+                  <!--<span class="year">Jan, 2020</span>-->
+                <!--</div>-->
+              <!--</div>-->
+              <!--<div class="event-content">-->
+                <!--<p class="event-time"><i class="fa fa-clock-o"></i> 8 : 00 AM</p>-->
+                <!--<h3 class="event-title">Check-in</h3>-->
+                <!--<p>Arrive at the location with your valid college ID Card and a printout of the acceptance form. All-->
+                  <!--the participants need to arrive latest by 10 AM.</p>-->
+              <!--</div>-->
+            <!--</div>-->
+            <!--[> /event <]-->
 
-            <!-- event -->
-            <div class="event">
-              <div class="event-hour"></div>
-              <div class="event-content">
-                <p class="event-time"><i class="fa fa-clock-o"></i> 10 : 00 AM</p>
-                <h3 class="event-title">Opening Ceremony</h3>
-                <p>The hackathon will begin with a small welcome ceremony and the participants will be addressed by the
-                  coordinators.
-                </p>
-              </div>
-            </div>
-            <!-- /event -->
-            {{!-- <div class="event">
-              <div class="event-hour"></div>
-              <div class="event-content">
-                <p class="event-time"><i class="fa fa-clock-o"></i> 10 : 45 AM</p>
-                <h3 class="event-title">Pre-Hacking Info</h3>
-                <p>API demo from Matic. Also Devfolio make the hackers understand the basics of their platform.
-                </p>
-              </div>
-            </div> --}}
-            <!-- event -->
-            <!-- /event -->
+            <!--[> event <]-->
+            <!--<div class="event">-->
+              <!--<div class="event-hour"></div>-->
+              <!--<div class="event-content">-->
+                <!--<p class="event-time"><i class="fa fa-clock-o"></i> 10 : 00 AM</p>-->
+                <!--<h3 class="event-title">Opening Ceremony</h3>-->
+                <!--<p>The hackathon will begin with a small welcome ceremony and the participants will be addressed by the-->
+                  <!--coordinators.-->
+                <!--</p>-->
+              <!--</div>-->
+            <!--</div>-->
+            <!--[> /event <]-->
+            <!--{{!-- <div class="event">-->
+              <!--<div class="event-hour"></div>-->
+              <!--<div class="event-content">-->
+                <!--<p class="event-time"><i class="fa fa-clock-o"></i> 10 : 45 AM</p>-->
+                <!--<h3 class="event-title">Pre-Hacking Info</h3>-->
+                <!--<p>API demo from Matic. Also Devfolio make the hackers understand the basics of their platform.-->
+                <!--</p>-->
+              <!--</div>-->
+            <!--</div> --}}-->
+            <!--[> event <]-->
+            <!--[> /event <]-->
 
-            <!-- event -->
-            <div class="event">
-              <div class="event-hour"></div>
-              <div class="event-content">
-                <p class="event-time"><i class="fa fa-clock-o"></i> 11 : 00 AM</p>
-                <h3 class="event-title">Hacking Starts!</h3>
-                <p>Hacking Commences. Time to Unleash!!</p>
-              </div>
-            </div>
-            <!-- /event -->
+            <!--[> event <]-->
+            <!--<div class="event">-->
+              <!--<div class="event-hour"></div>-->
+              <!--<div class="event-content">-->
+                <!--<p class="event-time"><i class="fa fa-clock-o"></i> 11 : 00 AM</p>-->
+                <!--<h3 class="event-title">Hacking Starts!</h3>-->
+                <!--<p>Hacking Commences. Time to Unleash!!</p>-->
+              <!--</div>-->
+            <!--</div>-->
+            <!--[> /event <]-->
 
-            <!-- event -->
-            <div class="event">
-              <div class="event-hour"></div>
-              <div class="event-content">
-                <p class="event-time"><i class="fa fa-clock-o"></i> 1 : 00 PM</p>
-                <h3 class="event-title">Lunch</h3>
-                <p>The participants will be provided with scrumptious lunch to go about the day.</p>
-              </div>
-            </div>
-            <!-- /event -->
+            <!--[> event <]-->
+            <!--<div class="event">-->
+              <!--<div class="event-hour"></div>-->
+              <!--<div class="event-content">-->
+                <!--<p class="event-time"><i class="fa fa-clock-o"></i> 1 : 00 PM</p>-->
+                <!--<h3 class="event-title">Lunch</h3>-->
+                <!--<p>The participants will be provided with scrumptious lunch to go about the day.</p>-->
+              <!--</div>-->
+            <!--</div>-->
+            <!--[> /event <]-->
 
-            <div class="event">
-              <div class="event-hour"></div>
-              <div class="event-content">
-                <p class="event-time"><i class="fa fa-clock-o"></i> 4 : 00 PM</p>
-                <h3 class="event-title">Panel Discussion</h3>
-                <p>A Discussion with the judges to get a better insight about the present industry culture and top trends.</p>
-              </div>
-            </div>
+            <!--<div class="event">-->
+              <!--<div class="event-hour"></div>-->
+              <!--<div class="event-content">-->
+                <!--<p class="event-time"><i class="fa fa-clock-o"></i> 4 : 00 PM</p>-->
+                <!--<h3 class="event-title">Panel Discussion</h3>-->
+                <!--<p>A Discussion with the judges to get a better insight about the present industry culture and top trends.</p>-->
+              <!--</div>-->
+            <!--</div>-->
 
-            <!-- event -->
-            <div class="event">
-              <div class="event-hour"></div>
-              <div class="event-content">
-                <p class="event-time"><i class="fa fa-clock-o"></i> 5 : 00 PM</p>
-                <h3 class="event-title">Tea Break</h3>
-                <p>The participants will be provided with tea, coffee and some snacks.</p>
-              </div>
-            </div>
-            <!-- /event -->
+            <!--[> event <]-->
+            <!--<div class="event">-->
+              <!--<div class="event-hour"></div>-->
+              <!--<div class="event-content">-->
+                <!--<p class="event-time"><i class="fa fa-clock-o"></i> 5 : 00 PM</p>-->
+                <!--<h3 class="event-title">Tea Break</h3>-->
+                <!--<p>The participants will be provided with tea, coffee and some snacks.</p>-->
+              <!--</div>-->
+            <!--</div>-->
+            <!--[> /event <]-->
 
-            <!-- event -->
-            <div class="event">
-              <div class="event-hour"></div>
-              <div class="event-content">
-                <p class="event-time"><i class="fa fa-clock-o"></i> 8 : 00 PM</p>
-                <h3 class="event-title">Dinner</h3>
-                <p>First Day of hackathon will end with delicious dinner.</p>
-              </div>
-            </div>
-            <!-- /event -->
+            <!--[> event <]-->
+            <!--<div class="event">-->
+              <!--<div class="event-hour"></div>-->
+              <!--<div class="event-content">-->
+                <!--<p class="event-time"><i class="fa fa-clock-o"></i> 8 : 00 PM</p>-->
+                <!--<h3 class="event-title">Dinner</h3>-->
+                <!--<p>First Day of hackathon will end with delicious dinner.</p>-->
+              <!--</div>-->
+            <!--</div>-->
+            <!--[> /event <]-->
 
-            <!-- event -->
-            <div class="event">
-              <div class="event-day">
-                <div>
-                  <span class="day">19</span>
-                  <span class="year">Jan, 2020</span>
-                </div>
-              </div>
-              <div class="event-content">
-                <p class="event-time"><i class="fa fa-clock-o"></i> 1 : 00 AM</p>
-                <h3 class="event-title">Midnight Snacks</h3>
-                <p>Midnight snacks will be provided to diffuse the late night tension.</p>
-              </div>
-            </div>
-            <!-- /event -->
+            <!--[> event <]-->
+            <!--<div class="event">-->
+              <!--<div class="event-day">-->
+                <!--<div>-->
+                  <!--<span class="day">19</span>-->
+                  <!--<span class="year">Jan, 2020</span>-->
+                <!--</div>-->
+              <!--</div>-->
+              <!--<div class="event-content">-->
+                <!--<p class="event-time"><i class="fa fa-clock-o"></i> 1 : 00 AM</p>-->
+                <!--<h3 class="event-title">Midnight Snacks</h3>-->
+                <!--<p>Midnight snacks will be provided to diffuse the late night tension.</p>-->
+              <!--</div>-->
+            <!--</div>-->
+            <!--[> /event <]-->
 
-            <!-- event -->
-            <div class="event">
-              <div class="event-hour"></div>
-              <div class="event-content">
-                <p class="event-time"><i class="fa fa-clock-o"></i> 8 : 00 AM</p>
-                <h3 class="event-title">Breakfast</h3>
-                <p>Breakfast will be provided to the participants along with tea coffee and snacks.</p>
-              </div>
-            </div>
-            <!-- /event -->
+            <!--[> event <]-->
+            <!--<div class="event">-->
+              <!--<div class="event-hour"></div>-->
+              <!--<div class="event-content">-->
+                <!--<p class="event-time"><i class="fa fa-clock-o"></i> 8 : 00 AM</p>-->
+                <!--<h3 class="event-title">Breakfast</h3>-->
+                <!--<p>Breakfast will be provided to the participants along with tea coffee and snacks.</p>-->
+              <!--</div>-->
+            <!--</div>-->
+            <!--[> /event <]-->
 
-            <!-- event -->
-            <div class="event">
-              <div class="event-hour"></div>
-              <div class="event-content">
-                <p class="event-time"><i class="fa fa-clock-o"></i> 11 : 00 AM</p>
-                <h3 class="event-title">Primary Evaluation</h3>
-                <p>The primary evaluation for the hackathon will be conducted by the judges.</p>
-              </div>
-            </div>
-            <!-- /event -->
+            <!--[> event <]-->
+            <!--<div class="event">-->
+              <!--<div class="event-hour"></div>-->
+              <!--<div class="event-content">-->
+                <!--<p class="event-time"><i class="fa fa-clock-o"></i> 11 : 00 AM</p>-->
+                <!--<h3 class="event-title">Primary Evaluation</h3>-->
+                <!--<p>The primary evaluation for the hackathon will be conducted by the judges.</p>-->
+              <!--</div>-->
+            <!--</div>-->
+            <!--[> /event <]-->
 
-            <!-- event -->
-            <div class="event">
-              <div class="event-hour"></div>
-              <div class="event-content">
-                <p class="event-time"><i class="fa fa-clock-o"></i> 1 : 00 PM</p>
-                <h3 class="event-title">Lunch</h3>
-                <p>Lunch for day 2.</p>
-              </div>
-            </div>
-            <!-- /event -->
+            <!--[> event <]-->
+            <!--<div class="event">-->
+              <!--<div class="event-hour"></div>-->
+              <!--<div class="event-content">-->
+                <!--<p class="event-time"><i class="fa fa-clock-o"></i> 1 : 00 PM</p>-->
+                <!--<h3 class="event-title">Lunch</h3>-->
+                <!--<p>Lunch for day 2.</p>-->
+              <!--</div>-->
+            <!--</div>-->
+            <!--[> /event <]-->
 
-            <div class="event">
-              <div class="event-hour"></div>
-              <div class="event-content">
-                <p class="event-time"><i class="fa fa-clock-o"></i> 3 : 00 PM</p>
-                <h3 class="event-title">Final Evaluation Begins!</h3>
-                <p>The judges analyze the teams and their hacks. Top ideas are selected for the Presentation session.</p>
-              </div>
-            </div>
+            <!--<div class="event">-->
+              <!--<div class="event-hour"></div>-->
+              <!--<div class="event-content">-->
+                <!--<p class="event-time"><i class="fa fa-clock-o"></i> 3 : 00 PM</p>-->
+                <!--<h3 class="event-title">Final Evaluation Begins!</h3>-->
+                <!--<p>The judges analyze the teams and their hacks. Top ideas are selected for the Presentation session.</p>-->
+              <!--</div>-->
+            <!--</div>-->
 
-            <!-- event -->
-            <div class="event">
-              <div class="event-hour"></div>
-              <div class="event-content">
-                <p class="event-time"><i class="fa fa-clock-o"></i> 5 : 00 PM</p>
-                <h3 class="event-title">Presentation Session</h3>
-                <p>The selected participants will have to present their ideas and projects in front of everyone. The Showdown Begins!</p>
-              </div>
-            </div>
-            <!-- /event -->
+            <!--[> event <]-->
+            <!--<div class="event">-->
+              <!--<div class="event-hour"></div>-->
+              <!--<div class="event-content">-->
+                <!--<p class="event-time"><i class="fa fa-clock-o"></i> 5 : 00 PM</p>-->
+                <!--<h3 class="event-title">Presentation Session</h3>-->
+                <!--<p>The selected participants will have to present their ideas and projects in front of everyone. The Showdown Begins!</p>-->
+              <!--</div>-->
+            <!--</div>-->
+            <!--[> /event <]-->
 
-            <!-- event -->
-            <div class="event">
-              <div class="event-day">
-                <div>
-                  <span class="day">19</span>
-                  <span class="year">Jan, 2020</span>
-                </div>
-              </div>
-              <div class="event-content">
-                <p class="event-time"><i class="fa fa-clock-o"></i> 7 : 00 PM</p>
-                <h3 class="event-title">Results Declaration</h3>
-                <p>The judges will declare the winners of Dotslash Hackathon!</p>
-              </div>
-            </div>
-            <!-- /event -->
-          </div>
-          <div class="download-btn">
-            <a href="./assets/Brochure.pdf" download="Brochure" class="main-btn">Download Brochure</a>
-          </div>
+            <!--[> event <]-->
+            <!--<div class="event">-->
+              <!--<div class="event-day">-->
+                <!--<div>-->
+                  <!--<span class="day">19</span>-->
+                  <!--<span class="year">Jan, 2020</span>-->
+                <!--</div>-->
+              <!--</div>-->
+              <!--<div class="event-content">-->
+                <!--<p class="event-time"><i class="fa fa-clock-o"></i> 7 : 00 PM</p>-->
+                <!--<h3 class="event-title">Results Declaration</h3>-->
+                <!--<p>The judges will declare the winners of Dotslash Hackathon!</p>-->
+              <!--</div>-->
+            <!--</div>-->
+            <!--[> /event <]-->
+          <!--</div>-->
+          <!--<div class="download-btn">-->
+            <!--<a href="./assets/Brochure.pdf" download="Brochure" class="main-btn">Download Brochure</a>-->
+          <!--</div>-->
 
-        </div>
-      </div>
-      <!-- /row -->
-    </div>
-    <!-- /container -->
-  </div>
+        <!--</div>-->
+      <!--</div>-->
+      <!--[> /row <]-->
+    <!--</div>-->
+    <!--[> /container <]-->
+  <!--</div>-->
   <!-- /Event Schedule -->
 
   <!-- Present - Sponsors -->
