--- a/views/home.hbs
+++ b/views/home.hbs
@@ -88,7 +88,7 @@
         <ul class="main-nav nav navbar-nav navbar-right">
           <li><a href="#home">Home</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="#schedule">Schedule</a></li>
+          {{!-- <li><a href="#schedule">Schedule</a></li> --}}
           <li><a href="#sponsors">Sponsors</a></li>
           <li><a href="#faq">FAQs</a></li>
           <li><a href="#prizes">Prizes</a></li>
@@ -128,15 +128,14 @@
               <h4 class="lead" style="font-size: 25px;color: black; text-shadow:0 0 5px white">Root to Ideas</h4>
               <h5 class="lead" style="font-size: 30px;color: white;text-shadow:0 0 8px #bd0c0e ;font-weight:800">
                 <span style="font-size:20px">Powered by</span> ASHINE </h5>
-              <h3 class="lead" style="font-size: 20px;color: white;text-shadow:0 0 8px #bd0c0e ;font-weight:600">18th
-                January 2020 - 19th January 2020</h3>
+              <h3 class="lead" style="font-size: 20px;color: white;text-shadow:0 0 8px #bd0c0e ;font-weight:600">Comming Soon....</h3>
               {{!-- <button class="" id="devfolio-apply-now1"><svg class="logo" xmlns="http://www.w3.org/2000/svg" fill="#fff"
                   viewBox="0 0 115.46 123.46" style="height:24px;width:24px;margin-right:8px">
                   <path d="M115.46 68a55.43 55.43 0 0 1-50.85 55.11S28.12 124 16 123a12.6 12.6 0 0 1-10.09-7.5 15.85 15.85 0 0 0 5.36 1.5c4 .34 10.72.51 20.13.51 13.82 0 28.84-.38 29-.38h.26a60.14 60.14 0 0 0 54.72-52.47c.05 1.05.08 2.18.08 3.34z" />
                   <path d="M110.93 55.87A55.43 55.43 0 0 1 60.08 111s-36.48.92-48.58-.12C5 110.29.15 104.22 0 97.52l.2-83.84C.38 7 5.26.94 11.76.41c12.11-1 48.59.12 48.59.12a55.41 55.41 0 0 1 50.58 55.34z" /></svg>Apply
                 </button> --}}
-                <button class="" id="devfolio-apply-now1" onclick="register()">Register
-                </button>
+                {{!-- <button class="" id="devfolio-apply-now1" onclick="register()">Register
+                </button> --}}
             </div>
           </div>
           <!-- /home content -->
@@ -180,7 +179,7 @@
               platform for developers around the world to use their innovative skills to produce something new and
               useful for the society.
             </p>
-              <a href="https://join.slack.com/t/dotslashhackathon/shared_invite/enQtODY3MjMwOTIxOTA5LTU1YjdhZWUyOTMwZjk3MTU3NDkyNTlkMWQ0MzNiZTE5ZjRiM2FiYWM3NjdhNzdmM2UzNGZjMWUzMDQ2M2YyN2I" target="_blank"><button id="slackBtn"><i class="fa fa-slack"></i> Slack Channel</button></a>
+              {{!-- <a href="https://join.slack.com/t/dotslashhackathon/shared_invite/enQtODY3MjMwOTIxOTA5LTU1YjdhZWUyOTMwZjk3MTU3NDkyNTlkMWQ0MzNiZTE5ZjRiM2FiYWM3NjdhNzdmM2UzNGZjMWUzMDQ2M2YyN2I" target="_blank"><button id="slackBtn"><i class="fa fa-slack"></i> Slack Channel</button></a> --}}
         </div>
           <!-- /about content -->
 
@@ -373,12 +372,12 @@
     <div class="col-md-8 col-md-offset-2 text-center">
           <!-- about content -->
           <div class="about-content atlastmoment">
-            <p>DotSlash in collaboration with <b>Progate</b> is doing a 30-days <b>"Hackdotslash Learning Challenge" </b>from 15th Dec 2019 to 14th January 2020. 
+            <p>DotSlash in collaboration with <b>Progate</b> is doing a 30-days <b>"Hackdotslash Learning Challenge" </b>from 15th Dec 2020 to 14th January 2021. 
             You can learn any of the  15 languages or technologies available on Progate. 
             You should complete at least one of these tracks - HTML&CSS, JavaScript ES6, Python to enter the challenge.</p>
             <p>This will help you to learn or brush-up your programming skills and prepare for the hackathon in January. <b>Top 3 participants will receive a Progate t-shirt.</b>
             </p>
-            <p><b>You will be able to participate in the contest once you register for DotSlash 3.0</b></p>
+            <p><b>You will be able to participate in the contest once you register for DotSlash 4.0</b></p>
             </div>
     </div>
     </div>
@@ -898,8 +897,8 @@
                 <path d="M115.46 68a55.43 55.43 0 0 1-50.85 55.11S28.12 124 16 123a12.6 12.6 0 0 1-10.09-7.5 15.85 15.85 0 0 0 5.36 1.5c4 .34 10.72.51 20.13.51 13.82 0 28.84-.38 29-.38h.26a60.14 60.14 0 0 0 54.72-52.47c.05 1.05.08 2.18.08 3.34z" />
                 <path d="M110.93 55.87A55.43 55.43 0 0 1 60.08 111s-36.48.92-48.58-.12C5 110.29.15 104.22 0 97.52l.2-83.84C.38 7 5.26.94 11.76.41c12.11-1 48.59.12 48.59.12a55.41 55.41 0 0 1 50.58 55.34z" /></svg>Apply
               with Devfolio</button> --}}
-             <button class="" id="devfolio-apply-now1" onclick="register()">Register
-                </button>
+             {{!-- <button class="" id="devfolio-apply-now1" onclick="register()">Register
+                </button> --}}
 
           </div>
         </div>
@@ -936,7 +935,7 @@
         <div class="col-sm-4">
           <div class="contact">
             <h3>Email</h3>
-            <a href="mailto:vedant@hackdotslash.co.in">vedant@hackdotslash.co.in</a>
+            <a href="mailto:darshil@hackdotslash.co.in">darshil@hackdotslash.co.in</a>
           </div>
         </div>
         <!-- /contact -->
@@ -945,9 +944,8 @@
         <div class="col-sm-4">
           <div class="contact">
             <h3>Mobile</h3>
-            <a href="tel:+91 7283846580"><b>+91 72838 46580</b> - Vedant Dalal</a><br>
-            <a href="tel:+91 8879373722"><b>+91 88793 73722</b> - Shubham Agarwal</a><br>
-            {{!-- <a href="tel:+91 70968 29194"><b>+91 70968 29194</b> - Avinash Jaiswal</a> --}}
+            <a href="tel:+91 97129 89101"><b>+91 97129 89101</b> - Darshil Savaliya</a><br>
+            <a href="tel:+91 70166 05695"><b>+91 70166 05695</b> - Yamini Kabra</a><br>
           </div>
         </div>
         <!-- /contact -->
