--- a/views/home.hbs
+++ b/views/home.hbs
@@ -597,33 +597,9 @@
         <div id="sponsors" class="section">
             <div class="container">
                   <div class="row">
-
-                        <div class="section-title">
-                          <h3 class="title"><span>Our</span> <span style="color: #bd0c0e;">sponsors</span></h3>
-                        </div>
-                        <div class="col-xs-6">
-                          <a href="https://www.creative-tim.com/" target="_blank" class="sponsor">
-                            <img src="./img/tim-creative.png" alt="">
-                          </a>
-                        </div>
-                        <div class="col-xs-6">
-                          <a href="https://progate.com/" target="_blank" class="sponsor">
-                            <img src="./img/progate.png" alt="">
-                          </a>
-                        </div>
-                        <div class="col-xs-6">
-                          <a href="https://www.teqip.in/" target="_blank" class="sponsor">
-                            <img src="./img/teqip.png" alt="">
-                          </a>
-                        </div>
-                        <div class="col-xs-1">
-                          
-                        </div>
-                        <div class="col-xs-5">
-                          <a href="http://www.ssipgujarat.in/" target="_blank" class="sponsor">
-                            <img src="./img/ssip.jpeg" alt="">
-                          </a>
-                        </div>
+                        <!--<div class="section-title">-->
+                          <!--<h3 class="title"><span>Our</span> <span style="color: #bd0c0e;">sponsors</span></h3>-->
+                        <!--</div>-->
                   </div>
             </div>
         </div>
@@ -637,6 +613,29 @@
         <div class="section-title">
           <h3 class="title"><span>Previous</span> <span style="color: #bd0c0e;">Sponsors</span></h3>
         </div>
+				<div class="col-xs-6">
+					<a href="https://www.creative-tim.com/" target="_blank" class="sponsor">
+						<img src="./img/tim-creative.png" alt="">
+					</a>
+				</div>
+				<div class="col-xs-6">
+					<a href="https://progate.com/" target="_blank" class="sponsor">
+						<img src="./img/progate.png" alt="">
+					</a>
+				</div>
+				<div class="col-xs-6">
+					<a href="https://www.teqip.in/" target="_blank" class="sponsor">
+						<img src="./img/teqip.png" alt="">
+					</a>
+				</div>
+				<div class="col-xs-1">
+
+				</div>
+				<div class="col-xs-5">
+					<a href="http://www.ssipgujarat.in/" target="_blank" class="sponsor">
+						<img src="./img/ssip.jpeg" alt="">
+					</a>
+				</div>
         <div class="col-xs-5">
           <a href="https://www.jetbrains.com/" target="_blank" class="sponsor">
             <img src="./img/jetbrains.jpeg" alt="">
