--- a/views/home.hbs
+++ b/views/home.hbs
@@ -128,7 +128,7 @@
               <h4 class="lead" style="font-size: 25px;color: black; text-shadow:0 0 5px white">Root to Ideas</h4>
               <h5 class="lead" style="font-size: 30px;color: white;text-shadow:0 0 8px #bd0c0e ;font-weight:800">
                 <span style="font-size:20px">Powered by</span> ASHINE </h5>
-              <h3 class="lead" style="font-size: 20px;color: white;text-shadow:0 0 8px #bd0c0e ;font-weight:600">Comming Soon....</h3>
+              <h3 class="lead" style="font-size: 20px;color: white;text-shadow:0 0 8px #bd0c0e ;font-weight:600">Coming Soon....</h3>
               {{!-- <button class="" id="devfolio-apply-now1"><svg class="logo" xmlns="http://www.w3.org/2000/svg" fill="#fff"
                   viewBox="0 0 115.46 123.46" style="height:24px;width:24px;margin-right:8px">
                   <path d="M115.46 68a55.43 55.43 0 0 1-50.85 55.11S28.12 124 16 123a12.6 12.6 0 0 1-10.09-7.5 15.85 15.85 0 0 0 5.36 1.5c4 .34 10.72.51 20.13.51 13.82 0 28.84-.38 29-.38h.26a60.14 60.14 0 0 0 54.72-52.47c.05 1.05.08 2.18.08 3.34z" />
@@ -368,23 +368,23 @@
       </div>
     </div>
     <br>
-    <div class="row">
-    <div class="col-md-8 col-md-offset-2 text-center">
-          <!-- about content -->
-          <div class="about-content atlastmoment">
-            <p>DotSlash in collaboration with <b>Progate</b> is doing a 30-days <b>"Hackdotslash Learning Challenge" </b>from 15th Dec 2020 to 14th January 2021. 
-            You can learn any of the  15 languages or technologies available on Progate. 
-            You should complete at least one of these tracks - HTML&CSS, JavaScript ES6, Python to enter the challenge.</p>
-            <p>This will help you to learn or brush-up your programming skills and prepare for the hackathon in January. <b>Top 3 participants will receive a Progate t-shirt.</b>
-            </p>
-            <p><b>You will be able to participate in the contest once you register for DotSlash 4.0</b></p>
-            </div>
-    </div>
-    </div>
-  </div>
+    <!--<div class="row">-->
+    <!--<div class="col-md-8 col-md-offset-2 text-center">-->
+					 <!--about content -->
+          <!--<div class="about-content atlastmoment">-->
+            <!--<p>DotSlash in collaboration with <b>Progate</b> is doing a 30-days <b>"Hackdotslash Learning Challenge" </b>from 15th Dec 2020 to 14th January 2021. -->
+            <!--You can learn any of the  15 languages or technologies available on Progate. -->
+            <!--You should complete at least one of these tracks - HTML&CSS, JavaScript ES6, Python to enter the challenge.</p>-->
+            <!--<p>This will help you to learn or brush-up your programming skills and prepare for the hackathon in January. <b>Top 3 participants will receive a Progate t-shirt.</b>-->
+            <!--</p>-->
+            <!--<p><b>You will be able to participate in the contest once you register for DotSlash 4.0</b></p>-->
+            <!--</div>-->
+    <!--</div>-->
+    <!--</div>-->
+  <!--</div>-->
 
 
-<br><br>
+<!--<br><br>-->
 
 
   <!--[> Event Schedule <]-->
@@ -631,11 +631,11 @@
 				<div class="col-xs-1">
 
 				</div>
-				<div class="col-xs-5">
-					<a href="http://www.ssipgujarat.in/" target="_blank" class="sponsor">
-						<img src="./img/ssip.jpeg" alt="">
-					</a>
-				</div>
+				<!--<div class="col-xs-5">-->
+					<!--<a href="http://www.ssipgujarat.in/" target="_blank" class="sponsor">-->
+						<!--<img src="./img/ssip.jpeg" alt="">-->
+					<!--</a>-->
+				<!--</div>-->
         <div class="col-xs-5">
           <a href="https://www.jetbrains.com/" target="_blank" class="sponsor">
             <img src="./img/jetbrains.jpeg" alt="">
@@ -829,49 +829,49 @@
   </div>
   <!-- /FAQS -->
   <!-- PRIZES -->
-  <div id="prizes" class="section">
-    <div class="container">
-      <div class="row">
-        <div class="section-title">
-          <h3 class="title"><span>P</span><span style="color: #bd0c0e;text-transform: lowercase">rizes</span></h3>
-        </div>
+  <!--<div id="prizes" class="section">-->
+    <!--<div class="container">-->
+      <!--<div class="row">-->
+        <!--<div class="section-title">-->
+          <!--<h3 class="title"><span>P</span><span style="color: #bd0c0e;text-transform: lowercase">rizes</span></h3>-->
+        <!--</div>-->
 
-        <div class="col-md-4 col-sm-4 col-xs-12">
-          <div class="content text-center">
-            <h2>First Prize</h2>
-          </div>
-          <a class="sponsor">
-            <img src="./img/cup.png" alt="">
-          </a>
-          <div class="content text-center">
-            <h2>Worth Rs.25,000</h2>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-4 col-xs-12">
-          <div class="content text-center">
-            <h2>Second Prize</h2>
-          </div>
-          <a class="sponsor">
-            <img src="./img/cup.png" alt="">
-          </a>
-          <div class="content text-center">
-            <h2>Worth Rs.15,000</h2>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-4 col-xs-12">
-          <div class="content text-center">
-            <h2>Third Prize</h2>
-          </div>
-          <a class="sponsor">
-            <img src="./img/cup.png" alt="">
-          </a>
-          <div class="content text-center">
-            <h2>Worth Rs.10,000</h2>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+        <!--<div class="col-md-4 col-sm-4 col-xs-12">-->
+          <!--<div class="content text-center">-->
+            <!--<h2>First Prize</h2>-->
+          <!--</div>-->
+          <!--<a class="sponsor">-->
+            <!--<img src="./img/cup.png" alt="">-->
+          <!--</a>-->
+          <!--<div class="content text-center">-->
+            <!--<h2>Worth Rs.25,000</h2>-->
+          <!--</div>-->
+        <!--</div>-->
+        <!--<div class="col-md-4 col-sm-4 col-xs-12">-->
+          <!--<div class="content text-center">-->
+            <!--<h2>Second Prize</h2>-->
+          <!--</div>-->
+          <!--<a class="sponsor">-->
+            <!--<img src="./img/cup.png" alt="">-->
+          <!--</a>-->
+          <!--<div class="content text-center">-->
+            <!--<h2>Worth Rs.15,000</h2>-->
+          <!--</div>-->
+        <!--</div>-->
+        <!--<div class="col-md-4 col-sm-4 col-xs-12">-->
+          <!--<div class="content text-center">-->
+            <!--<h2>Third Prize</h2>-->
+          <!--</div>-->
+          <!--<a class="sponsor">-->
+            <!--<img src="./img/cup.png" alt="">-->
+          <!--</a>-->
+          <!--<div class="content text-center">-->
+            <!--<h2>Worth Rs.10,000</h2>-->
+          <!--</div>-->
+        <!--</div>-->
+      <!--</div>-->
+    <!--</div>-->
+  <!--</div>-->
   <!-- /PRIZES -->
 
   <!-- CTA -->
@@ -887,7 +887,7 @@
         <!-- cta content -->
         <div class="col-md-8 col-md-offset-2">
           <div class="cta-content text-center">
-            <h2>Registrations started</h2>
+            <h2>Registrations starting soon</h2>
             <p class="lead">Our focus is on letting your imagination flow free and enable you to push the boundaries of
               what can be done. We're open for all! We'll take care of the food and stay - virtually leaving
               you no excuse to not build something that'll blow our minds.</p>
@@ -943,8 +943,8 @@
         <div class="col-sm-4">
           <div class="contact">
             <h3>Mobile</h3>
-            <a href="tel:+91 97129 89101"><b>+91 97129 89101</b> - Darshil Savaliya</a><br>
-            <a href="tel:+91 70166 05695"><b>+91 70166 05695</b> - Yamini Kabra</a><br>
+						<a href="tel:+91 97129 89101">&nbsp;<b>+91 97129 89101</b> - Darshil Savaliya</a><br>
+						<a href="tel:+91 70166 05695"><b>+91 70166 05695</b> - Yamini Kabra</a>
           </div>
         </div>
         <!-- /contact -->
