--- a/views/home.hbs
+++ b/views/home.hbs
@@ -160,12 +160,12 @@
         </div>
         <!-- /section title -->
 
-	<div class="college" style="text-align:center; margin-top:-20px;">
+				<div class="college" style="text-align:center; margin-top:-20px;">
 
-	<img  src="./img/ashine.png" alt="logo" style="height:100px;width:100px;border-radius:50%;">
-	<img  src="./img/svnit.png" alt="logo" style="height:100px;width:100px;border-radius:50%;">
+					<img  src="./img/ashine.png" alt="logo" style="height:100px;width:100px;border-radius:50%;">
+					<img  src="./img/svnit.png" alt="logo" style="height:100px;width:100px;border-radius:50%;">
 
-	</div><br><br>
+				</div><br><br>
 
         <div class="col-md-8 col-md-offset-2 text-center">
           <!-- about content -->
@@ -594,15 +594,15 @@
   <!-- /Event Schedule -->
 
   <!-- Present - Sponsors -->
-        <div id="sponsors" class="section">
-            <div class="container">
-                  <div class="row">
+        <!--<div id="sponsors" class="section">-->
+            <!--<div class="container">-->
+                  <!--<div class="row">-->
                         <!--<div class="section-title">-->
                           <!--<h3 class="title"><span>Our</span> <span style="color: #bd0c0e;">sponsors</span></h3>-->
                         <!--</div>-->
-                  </div>
-            </div>
-        </div>
+                  <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
 
 
   <!-- Previous-Sponsors -->
@@ -623,13 +623,10 @@
 						<img src="./img/progate.png" alt="">
 					</a>
 				</div>
-				<div class="col-xs-6">
+				<div class="col-xs-7">
 					<a href="https://www.teqip.in/" target="_blank" class="sponsor">
 						<img src="./img/teqip.png" alt="">
 					</a>
-				</div>
-				<div class="col-xs-1">
-
 				</div>
 				<!--<div class="col-xs-5">-->
 					<!--<a href="http://www.ssipgujarat.in/" target="_blank" class="sponsor">-->
@@ -700,6 +697,24 @@
     <!-- /container -->
   </div>
   <!-- /Sponsors -->
+
+	<!-- become-sponser -->
+	<div id="become-sponser" class="section">
+		<div class="section-title">
+			<div class="container">
+				<div class="row">
+					<div class="section-title">
+						<h3 class="title"><span>Want to become a sponser?</span></h3>
+					</div>
+				</div>
+				<div class="row">
+					<h4> Contact us at <a href="mailto:darshil@hackdotslash.co.in">darshil@hackdotslash.co.in</a> </h4>
+					<a href="./assets/Brochure.pdf" download="Brochure" class="main-btn">Download Brochure</a>
+				</div>
+			</div>
+		</div>	
+	</div>
+	<!-- /become-sponser -->
 
   <!-- FAQS -->
 
@@ -895,7 +910,7 @@
                 viewBox="0 0 115.46 123.46" style="height:24px;width:24px;margin-right:8px">
                 <path d="M115.46 68a55.43 55.43 0 0 1-50.85 55.11S28.12 124 16 123a12.6 12.6 0 0 1-10.09-7.5 15.85 15.85 0 0 0 5.36 1.5c4 .34 10.72.51 20.13.51 13.82 0 28.84-.38 29-.38h.26a60.14 60.14 0 0 0 54.72-52.47c.05 1.05.08 2.18.08 3.34z" />
                 <path d="M110.93 55.87A55.43 55.43 0 0 1 60.08 111s-36.48.92-48.58-.12C5 110.29.15 104.22 0 97.52l.2-83.84C.38 7 5.26.94 11.76.41c12.11-1 48.59.12 48.59.12a55.41 55.41 0 0 1 50.58 55.34z" /></svg>Apply
-              with Devfolio</button> --}}
+              with Devfolio</button> --}n}
              {{!-- <button class="" id="devfolio-apply-now1" onclick="register()">Register
                 </button> --}}
 
@@ -1058,4 +1073,4 @@
   </script>
 </body>
 
-</html>
+
