--- a/views/home.hbs
+++ b/views/home.hbs
@@ -958,7 +958,7 @@
         <div class="col-sm-4">
           <div class="contact">
             <h3>Mobile</h3>
-						<a href="tel:+91 97129 89101">&nbsp;<b>+91 97129 89101</b> - Darshil Savaliya</a><br>
+						<a href="tel:+91 97129 89101">&nbsp;&nbsp;<b>+91 97129 89101</b> - Darshil Savaliya</a><br>
 						<a href="tel:+91 70166 05695"><b>+91 70166 05695</b> - Yamini Kabra</a>
           </div>
         </div>
