--- a/views/home.hbs
+++ b/views/home.hbs
@@ -698,13 +698,13 @@
   </div>
   <!-- /Sponsors -->
 
-	<!-- become-sponser -->
-	<div id="become-sponser" class="section">
+	<!-- become-sponsor -->
+	<div id="become-sponsor" class="section">
 		<div class="section-title">
 			<div class="container">
 				<div class="row">
 					<div class="section-title">
-						<h3 class="title"><span>Want to become a sponser?</span></h3>
+						<h3 class="title"><span>Want to become a sponsor?</span></h3>
 					</div>
 				</div>
 				<div class="row">
@@ -714,7 +714,7 @@
 			</div>
 		</div>	
 	</div>
-	<!-- /become-sponser -->
+	<!-- /become-sponsor -->
 
   <!-- FAQS -->
 
