--- a/public/css/style.css
+++ b/public/css/style.css
@@ -69,7 +69,7 @@ h4 {
 }
 
 .lead {
-  font-size: 20px;
+  font-size: 24px;
 }
 
 a {
@@ -97,7 +97,8 @@ ul, ol {
   color: #FFF;
   text-transform: uppercase;
   border: none;
-  border-radius: 2px;
+  border-radius: 25px;
+  box-shadow: 3px 3px #5d0709;
   -webkit-transition: 0.3s all;
   transition: 0.3s all;
 }
@@ -139,8 +140,8 @@ textarea.input {
   position: absolute;
   background-image: 
     linear-gradient(
-      rgba(255, 255, 255, 0.1),
-      rgba(255, 255, 255, 0.1)
+      rgba(255, 255, 255, 0.5),
+      rgba(255, 255, 255, 0)
     ),
     url(/img/main.jpg);
   left: 0;
@@ -234,7 +235,8 @@ textarea.input {
   right: 0;
   top: 0;
   background-color: transparent;
-  border-bottom: 1px solid #DADADA30;
+  border-bottom: none;
+  /* border-bottom: 1px solid #DADADA30; */
 }
 
 #header.fixed-navbar {
@@ -384,6 +386,12 @@ textarea.input {
   -webkit-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
+}
+
+.home-content {
+  width: 60vw;
+  border-top-left-radius: 50px 0;
+  border-top-right-radius: 50px 0;
 }
 
 .home-content h1 {
@@ -825,8 +833,8 @@ textarea.input {
 }
 
 .sponsor>img {
-  height: 200px;
-  width: auto;
+  width: 35vw;
+  height: auto;
 }
 .home-content{
   text-align: center;
@@ -932,8 +940,10 @@ textarea.input {
 }
 .tracks img{
   max-height: 200px;
-  min-width:100%;
+  /* min-width:100%; */
   border-radius: 5px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .tracks p{
   margin-top:20px;
