--- a/public/css/style.css
+++ b/public/css/style.css
@@ -136,22 +136,6 @@ textarea.input {
   padding: 90px 0px;
 }
 
-.section-bg {
-  position: absolute;
-  background-image: 
-    linear-gradient(
-      rgba(255, 255, 255, 0.5),
-      rgba(255, 255, 255, 0)
-    ),
-    url(/img/main.jpg);
-  left: 0;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  background-size: cover;
-  z-index: -1;
-}
-
 .section-title {
   text-align: center;
   margin-bottom: 60px;
@@ -379,17 +363,17 @@ textarea.input {
 
 #home .home-wrapper {
   position: absolute;
-  top: 50%;
+  top: 15%;
   left: 0;
   right: 0;
   text-align: center;
-  -webkit-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
+  margin-bottom: 5rem;
 }
 
 .home-content {
   width: 60vw;
+  top: 50%;
+  width: 65%;
   border-top-left-radius: 50px 0;
   border-top-right-radius: 50px 0;
 }
