Revert "modify ui for desktop"

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -69,7 +69,7 @@ h4 {
 }
 
 .lead {
-  font-size: 24px;
+  font-size: 20px;
 }
 
 a {
@@ -97,8 +97,7 @@ ul, ol {
   color: #FFF;
   text-transform: uppercase;
   border: none;
-  border-radius: 25px;
-  box-shadow: 3px 3px #5d0709;
+  border-radius: 2px;
   -webkit-transition: 0.3s all;
   transition: 0.3s all;
 }
@@ -134,6 +133,22 @@ textarea.input {
 .section {
   position: relative;
   padding: 90px 0px;
+}
+
+.section-bg {
+  position: absolute;
+  background-image: 
+    linear-gradient(
+      rgba(255, 255, 255, 0.1),
+      rgba(255, 255, 255, 0.1)
+    ),
+    url(/img/main.jpg);
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  background-size: cover;
+  z-index: -1;
 }
 
 .section-title {
@@ -219,8 +234,7 @@ textarea.input {
   right: 0;
   top: 0;
   background-color: transparent;
-  border-bottom: none;
-  /* border-bottom: 1px solid #DADADA30; */
+  border-bottom: 1px solid #DADADA30;
 }
 
 #header.fixed-navbar {
@@ -363,19 +377,13 @@ textarea.input {
 
 #home .home-wrapper {
   position: absolute;
-  top: 15%;
+  top: 50%;
   left: 0;
   right: 0;
   text-align: center;
-  margin-bottom: 5rem;
-}
-
-.home-content {
-  width: 60vw;
-  top: 50%;
-  width: 65%;
-  border-top-left-radius: 50px 0;
-  border-top-right-radius: 50px 0;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
 }
 
 .home-content h1 {
@@ -817,8 +825,8 @@ textarea.input {
 }
 
 .sponsor>img {
-  width: 35vw;
-  height: auto;
+  height: 200px;
+  width: auto;
 }
 .home-content{
   text-align: center;
@@ -924,10 +932,8 @@ textarea.input {
 }
 .tracks img{
   max-height: 200px;
-  /* min-width:100%; */
+  min-width:100%;
   border-radius: 5px;
-  margin-left: auto;
-  margin-right: auto;
 }
 .tracks p{
   margin-top:20px;
