--- a/views/home.hbs
+++ b/views/home.hbs
@@ -613,85 +613,95 @@
         <div class="section-title">
           <h3 class="title"><span>Previous</span> <span style="color: #bd0c0e;">Sponsors</span></h3>
         </div>
-				<div class="col-xs-6">
-					<a href="https://www.creative-tim.com/" target="_blank" class="sponsor">
+        <div style="display: flex; flex-direction: column;">
+          <a href="https://www.creative-tim.com/" target="_blank" class="sponsor">
 						<img src="./img/tim-creative.png" alt="">
 					</a>
-				</div>
-				<div class="col-xs-6">
 					<a href="https://progate.com/" target="_blank" class="sponsor">
 						<img src="./img/progate.png" alt="">
 					</a>
-				</div>
-				<div class="col-xs-7">
 					<a href="https://www.teqip.in/" target="_blank" class="sponsor">
 						<img src="./img/teqip.png" alt="">
 					</a>
-				</div>
-				<!--<div class="col-xs-5">-->
-					<!--<a href="http://www.ssipgujarat.in/" target="_blank" class="sponsor">-->
-						<!--<img src="./img/ssip.jpeg" alt="">-->
-					<!--</a>-->
-				<!--</div>-->
-        <div class="col-xs-5">
           <a href="https://www.jetbrains.com/" target="_blank" class="sponsor">
             <img src="./img/jetbrains.jpeg" alt="">
           </a>
-        </div>
-        {{!-- <div class="col-xs-7">
-          <a href="https://devfolio.co/" target="_blank" class="sponsor">
-            <img style="width:100%" src="https://hackinout.co/img/logo-devfolio.svg" alt="">
-          </a>
-        </div> --}}
-        <div class="col-xs-7">
            <a href="https://matic.network/" target="_blank" class="sponsor">
-            <img style="width:100%;height:auto" src="img/Matic.png" alt="">
+            <img src="img/Matic.png" alt="">
           </a>
-        </div>
-        <div class="col-xs-12">
           <a href="https://zujo.io/" target="_blank" class="sponsor">
-            <img style="width:100%" src="img/juzo.png" alt="">
+            <img src="img/juzo.png" alt="">
           </a>
-        </div>
-        <div class="col-xs-7">
-          <a href="https://cloudsploit.com/" target="_blank" class="sponsor">
-            <img style="width:100%" src="https://cloudsploit.com/img/logo-big-text-100.png" alt="">
-          </a>
-        </div>
-        <div class="col-xs-1"></div>
-        <div class="col-xs-4">
           <a href="https://www.bugsee.com/" target="_blank" class="sponsor">
-            <img style="width:100%" src="img/bugsee.png" alt="">
+            <img src="img/bugsee.png" alt="">
           </a>
-        </div>
-        <div class="col-xs-5">
           <a href="https://www.aasaanjobs.com/" style="opacity:1" target="_blank" class="sponsor">
-            <img style="width:100%;" src="img/aasanjobs.png" alt="">
+            <img src="img/aasanjobs.png" alt="">
           </a>
-        </div>
-        <div class="col-xs-7">
           <a href="https://monday.com/" style="opacity:1" target="_blank" class="sponsor">
-            <img style="width:100%;" src="img/mo.png" alt="">
+            <img src="img/mo.png" alt="">
           </a>
-        </div>
-        <div class="col-xs-8">
           <a href="https://get.tech/" target="_blank" class="sponsor">
-            <img style="width:100%" src="img/tech-logo.jpg" alt="">
+            <img src="img/tech-logo.jpg" alt="">
           </a>
-        </div>
-        <div class="col-xs-4">
           <a href="http://www.ssipgujarat.in" style="opacity:1" target="_blank" class="sponsor">
-            <img style="width:100%;" src="img/ssip.jpeg" alt="">
+            <img src="img/ssip.jpeg" alt="">
           </a>
-        </div>
-        <div class="col-xs-5">
           <a href="https://backbuckle.io/" target="_blank" class="sponsor">
-            <img style="width:100%" src="img/BBLogo1.png" alt="">
+            <img src="img/BBLogo1.png" alt="">
+          </a>
+          <a href="https://www.agora.io/" target="_blank" class="sponsor">
+            <img src="img/agora.png" alt="">
+          </a>
+          <a href="https://balsamiq.com/" target="_blank" class="sponsor">
+            <img src="img/balsamiq-logo.png" alt="">
+          </a>
+          <a href="https://cloudsploit.com/" target="_blank" class="sponsor">
+            <img src="img/cloudsploit-logo.png" alt="">
+          </a>
+          <a href="https://www.codingninjas.com/" target="_blank" class="sponsor">
+            <img src="img/Cnlogo-01.png" alt="">
+          </a>
+          <a href="https://www.codacy.com/" target="_blank" class="sponsor">
+            <img src="img/codacy-logo.png" alt="">
+          </a>
+          <a href="https://github.com/" target="_blank" class="sponsor">
+            <img src="img/github-logo.jpg" alt="">
+          </a>
+          <a href="https://codingblocks.com/" target="_blank" class="sponsor">
+            <img src="img/coding-blocks-logo.png" alt="">
+          </a>
+          <a href="https://www.wolfram.com/language/" target="_blank" class="sponsor">
+            <img src="img/wolfram.png" alt="">
+          </a>
+          <a href="https://www.linode.com/" target="_blank" class="sponsor">
+            <img src="img/linode-logo.png" alt="">
+          </a>
+          <a href="https://oswaldlabs.com/" target="_blank" class="sponsor">
+            <img src="img/oswald-lab.png" alt="">
+          </a>
+          <a href="https://pomodoneapp.com/" target="_blank" class="sponsor">
+            <img src="img/pomodone-logo.png" alt="">
+          </a>
+          <a href="https://www.sketch.com/" target="_blank" class="sponsor">
+            <img src="img/sketch-logo-light-transparent.png" alt="">
+          </a>
+          <a href="https://rosenfeldmedia.com/" target="_blank" class="sponsor">
+            <img src="img/rosenfeld.jpg" alt="">
+          </a>
+          <a href="https://www.uxpin.com/" target="_blank" class="sponsor">
+            <img src="img/UXPin-Logo-BlackFill@2x.png" alt="">
+          </a>
+          <a href="https://www.womenwhocode.com/" target="_blank" class="sponsor">
+            <img src="img/wwc.jpg" alt="">
+          </a>
+          <a href="https://zubi.io/" target="_blank" class="sponsor">
+            <img src="img/zubi.png" alt="">
+          </a>
+          <a href="https://www.producthunt.com/" target="_blank" class="sponsor">
+            <img src="img/profucthunt-logo.png" alt="">
           </a>
         </div>
-
-
-      </div>
       <!-- /row -->
     </div>
     <!-- /container -->
