--- a/views/home.hbs
+++ b/views/home.hbs
@@ -104,9 +104,6 @@
 
   <!-- Home -->
   <div id="home">
-    <!-- background image -->
-    <div class="section-bg"  data-stellar-background-ratio="0.5"></div>
-    <!-- /background image -->
 
     <!-- home wrapper -->
     <div class="home-wrapper">
@@ -125,7 +122,7 @@
         <!-- row -->
         <div class="row">
           <!-- home content -->
-          <div class="col-md-8 col-md-offset-2">
+          <div>
             <!--
             <div class="home-content">
                 <h1><img src="img/logo_only1.png" width="100px"><span style="color: #bd0c0e"> DOT</span><span style="color: black"> SLASH</span></h1>
