modify logo in navbar

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -70,7 +70,7 @@
         <div class="navbar-brand">
           <a class="logo" href="/">
             <img class="logo-img logofix" src="./img/image.png" alt="logo">
-            <img class="logo-alt-img" src="./img/logo_final13.png" alt="logo">
+            <img class="logo-alt-img" src="./img/image.png" alt="logo">
           </a>
         </div>
         <!-- /Logo -->
