--- a/views/home.hbs
+++ b/views/home.hbs
@@ -169,8 +169,8 @@
 
 				<div class="college" style="text-align:center; margin-top:-20px;">
 
-					<img  src="./img/ashine.png" alt="logo" style="height:100px;width:100px;border-radius:50%;">
-					<img  src="./img/svnit.png" alt="logo" style="height:100px;width:100px;border-radius:50%;">
+					<img  src="./img/ashine.png" alt="logo" style="height:120px;width:120px;border-radius:50%;">
+					<img  src="./img/svnit.png" alt="logo" style="height:120px;width:120px;border-radius:50%;">
 
 				</div><br><br>
 
@@ -345,7 +345,7 @@
     <div class="row">
       <div class="col-xs-12">
         <div class="section-title">
-          <h3 class="title"><span style="color:#0b0f28">The </span> <span style="color: #bd0c0e;"> Hackathon</span></h3>
+          <h3 class="title"><span style="color:#000;">The &nbsp;</span><span style="color: #bd0c0e;"> Hackathon</span></h3>
         </div>
       </div>
     </div>
@@ -359,15 +359,15 @@
         </p>
       </div> --}}
       <div class="col-xs-6">
-        <h3>Software</h3>
-        <img src="img/soft.jpg" class="img-responsive" alt="">
+        <h2 style="color: #bd0c0e">Software</h2>
+        <img src="img/soft.png" class="img-responsive" alt="" style="margin: 0 auto; width: auto;">
         <p>Explore the realms of Web and Mobile based applications while developing your ideas under this track. You are free to use any framework and any code fragment, until and unless it is open sourced.</p>
         The limits are endless and the possiblities are infinite. 
         <br><b style="color:  #bd0c0e;">The track will contain problem statements.</b>
       </div>
       <div class="col-xs-6">
-        <h3>Hardware</h3>
-        <img src="img/hard.jpg" class="img-responsive" alt="">
+        <h2 style="color: #bd0c0e">Hardware</h2>
+        <img src="img/hardware.png" class="img-responsive" alt="" style="margin: 0 auto; width: auto;">
         <p style="margin-bottom:5px;">Want to develop your ideas to interact with the physical world? Under this track you can use any microcontroller or microprocessor with any interfacing peripheral to achieve your goal.
           <br>If you have some special hardware requirements, we request you to bring those alongwith.
           <br><b style="color:  #bd0c0e;">The track will contain problem statements.</b>
@@ -618,9 +618,12 @@
     <div class="container">
       <div class="row">
         <div class="section-title">
-          <h3 class="title"><span>Previous</span> <span style="color: #bd0c0e;">Sponsors</span></h3>
+          <h3 class="title"><span style="color: #000;">Previous &nbsp;</span><span style="color: #bd0c0e;">Sponsors</span></h3>
         </div>
-        <div style="display: flex; flex-direction: column;">
+        <div style="display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;">
           <a href="https://www.creative-tim.com/" target="_blank" class="sponsor">
 						<img src="./img/tim-creative.png" alt="">
 					</a>
@@ -735,14 +738,17 @@
 
   <!-- FAQS -->
 
-  <div id="faq" class="section" style="background-color: whitesmoke">
+  <div id="faq" class="section">
     <!-- container -->
     <div class="container">
       <!-- row -->
       <div class="row">
         <!-- section title -->
-        <div class="section-title">
-          <h3 class="title"><span>F</span><span style="color: #bd0c0e;">AQ</span></h3>
+        <div class="section-title" style="display: flex; flex-wrap: wrap-reverse; flex-flow: column-reverse; align-items: center; justify-content: center;">
+          <div style="display: flex;">
+            <h3 class="title"><span style="color: #000;">Frequently Asked &nbsp;</span><span style="color: #bd0c0e;">Questions</span></h3>
+          </div>
+          <img src="img/faq.png">
         </div>
       </div>
 
@@ -750,7 +756,7 @@
         <div class="col-xs-12 col-md-12 col-lg-12 col-sm-12">
           <div class="row faqs">
             <div class="col-sm-6 col-md-6 col-lg-6 col-xs-12 " id="accordion">
-              <h2 data-parent="#accordion" data-toggle="collapse" class="box h21 arrow0" href="#num1" style="cursor: pointer">
+              <h2 data-parent="#accordion" data-toggle="collapse" class="box h21 arrow0" href="#num1" style="cursor: pointer; font-weight: 300;">
                 <span><i class="material-icons prefix arrow-img0">play_arrow</i></span>Who can participate?
 
               </h2>
@@ -758,13 +764,13 @@
                 are under 18 years of age, we'll need a
                 parental consent form. </p>
               <br>
-              <h2 data-parent="#accordion" data-toggle="collapse" class="box arrow1" href="#num2" style="cursor: pointer">
+              <h2 data-parent="#accordion" data-toggle="collapse" class="box arrow1" href="#num2" style="cursor: pointer; font-weight: 300;">
                 <span><i class="material-icons prefix arrow-img1">play_arrow</i></span>What is the Registration fee for
                 hackathon?
               </h2>
               <p class="collapse box1" id="num2">Glad you asked. <b>Its completely Free!!!</b></p>
               <br>
-              <h2 data-parent="#accordion" data-toggle="collapse" class="box arrow2" href="#num3" style="cursor: pointer">
+              <h2 data-parent="#accordion" data-toggle="collapse" class="box arrow2" href="#num3" style="cursor: pointer; font-weight: 300;">
                 <span><i class="material-icons prefix arrow-img2">play_arrow</i></span>How does the application process
                 work?
               </h2>
@@ -775,7 +781,7 @@
                 hackathons.
               </p>
               <br>
-              <h2 data-parent="#accordion" data-toggle="collapse" class="box arrow3" href="#num4" style="cursor: pointer">
+              <h2 data-parent="#accordion" data-toggle="collapse" class="box arrow3" href="#num4" style="cursor: pointer; font-weight: 300;">
                 <span><i class="material-icons prefix arrow-img3">play_arrow</i></span>Can we apply as a team?
 
               </h2>
@@ -785,7 +791,7 @@
                 time of
                 hackathon.</p>
               <br>
-              <h2 data-parent="#accordion" data-toggle="collapse" class="box arrow4" href="#num5" style="cursor: pointer">
+              <h2 data-parent="#accordion" data-toggle="collapse" class="box arrow4" href="#num5" style="cursor: pointer; font-weight: 300;">
                 <span><i class="material-icons prefix arrow-img4">play_arrow</i></span>What do I get by attending
                 DotSlash?
               </h2>
@@ -795,7 +801,7 @@
                 experience and memories for a lifetime!<br><br>You will also get a cool geeky T-Shirt, Certificate of
                 Participation and a bag full of schwags.</p>
               <br>
-              <h2 data-parent="#accordion" data-toggle="collapse" class="box arrow5" href="#num6" style="cursor: pointer">
+              <h2 data-parent="#accordion" data-toggle="collapse" class="box arrow5" href="#num6" style="cursor: pointer; font-weight: 300;">
                 <span><i class="material-icons prefix arrow-img5">play_arrow</i></span>What do I need to bring after
                 registration?
               </h2>
@@ -804,7 +810,7 @@
               <br>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-              <h2 data-parent="#accordion" data-toggle="collapse" class="box arrow6" href="#num7" style="cursor: pointer">
+              <h2 data-parent="#accordion" data-toggle="collapse" class="box arrow6" href="#num7" style="cursor: pointer; font-weight: 300;">
                 <span><i class="material-icons prefix arrow-img6">play_arrow</i></span>What facilities will be provided
                 in hackathon?
               </h2>
@@ -814,7 +820,7 @@
                 <br> We will also provide a Certificate of Participation to every participant.</p>
               <br>
 
-              <h2 data-parent="#accordion" data-toggle="collapse" class="box arrow7" href="#num8" style="cursor: pointer">
+              <h2 data-parent="#accordion" data-toggle="collapse" class="box arrow7" href="#num8" style="cursor: pointer; font-weight: 300;">
                 <span><i class="material-icons prefix arrow-img7">play_arrow</i></span>What shouldn’t I bring?
 
               </h2>
@@ -822,14 +828,14 @@
                 kind, drugs, or alcohol. If you’re not
                 sure whether something will be okay, please ask ahead of time!</p>
               <br>
-              <h2 data-parent="#accordion" data-toggle="collapse" class="box arrow8" href="#num9" style="cursor: pointer">
+              <h2 data-parent="#accordion" data-toggle="collapse" class="box arrow8" href="#num9" style="cursor: pointer; font-weight: 300;">
                 <span><i class="material-icons prefix arrow-img8">play_arrow</i></span>What will be the theme for
                 DotSlash?
               </h2>
               <p class="collapse box1" id="num9">Not to worry, you will be provided with variety of theme options, once
                 you get selected.</p>
               <br>
-              <h2 data-parent="#accordion" data-toggle="collapse" class="box arrow9" href="#num10" style="cursor: pointer">
+              <h2 data-parent="#accordion" data-toggle="collapse" class="box arrow9" href="#num10" style="cursor: pointer; font-weight: 300;">
                 <span><i class="material-icons prefix arrow-img9">play_arrow</i></span>What is the registration
                 procedure?
 
@@ -837,7 +843,7 @@
               <p class="collapse box1" id="num10">You have to apply online. Once you are selected we will inform you
                 about the remaining procedure.</p>
               <br>
-              <h2 data-parent="#accordion" data-toggle="collapse" class="box arrow10" href="#num11" style="cursor: pointer">
+              <h2 data-parent="#accordion" data-toggle="collapse" class="box arrow10" href="#num11" style="cursor: pointer; font-weight: 300;">
                 <span><i class="material-icons prefix arrow-img10">play_arrow</i></span>What if I've never been to a
                 hackathon before?
               </h2>
@@ -845,7 +851,7 @@
                 have some programming or technical experience,
                 but it’s not a requirement. We’ll have talks, mentors and workshops to help you with your project.</p>
               <br>
-              <h2 data-parent="#accordion" data-toggle="collapse" class="box arrow11" href="#num12" style="cursor: pointer">
+              <h2 data-parent="#accordion" data-toggle="collapse" class="box arrow11" href="#num12" style="cursor: pointer; font-weight: 300;">
                 <span><i class="material-icons prefix arrow-img11">play_arrow</i></span>What about hardware?
               </h2>
               <p class="collapse box1" id="num12">If you have specific hardware in mind, bring it with you. We will be
@@ -1006,7 +1012,7 @@
         <div class="col-md-4">
           <div class="footer-brand">
             <a class="logo" href="/">
-              <img class="logo-img" src="./img/logo_final13.png" alt="logo">
+              <img class="logo-img" src="./img/image.png" alt="logo">
             </a>
           </div>
         </div>
