modify box shadow

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1255,7 +1255,7 @@ div.home-content {
   width: 65%;
   margin: 0;
   top: 50%;
-  box-shadow: -5px 5px 10px #ddd;
+  box-shadow: 0 5px 10px #ddd;
   border-radius: 25px;
 }
 
