--- a/views/home.hbs
+++ b/views/home.hbs
@@ -116,6 +116,9 @@
         <img src="img/main.png" class="img-responsive" alt="" style="
             
         ">
+        <img src="img/main-vector.png" class="img-responsive img-vector" alt="" style="
+        
+        ">
         {{!-- <img src="img/illustration.png" class="img-bg" alt="" style="
             
         "> --}}
@@ -952,7 +955,7 @@
       <div class="row">
         <!-- section title -->
         <div class="section-title">
-          <h3 class="title"><span>Contact</span> <span style="color: #bd0c0e;">Info</span></h3>
+          <h3 class="title"><span style="">Contact &nbsp;</span><span style="color: #bd0c0e;">Info</span></h3>
         </div>
         <!-- /section title -->
 
