--- a/views/form.hbs
+++ b/views/form.hbs
@@ -47,7 +47,7 @@ label {
         <div class="navbar-brand">
           <a class="logo" href="/">
             <img class="logo-img" src="./img/image.png" alt="logo">
-            <img class="logo-alt-img" src="./img/logo_final13.png" alt="logo">
+            <img class="logo-alt-img" src="./img/image.png" alt="logo">
           </a>
         </div>
         <!-- /Logo -->
