--- a/views/home.hbs
+++ b/views/home.hbs
@@ -59,7 +59,7 @@
 </style>
 
 <body>
-
+  <div style="overflow-x: hidden;">
   <!-- Header -->
   <header id="header" class="transparent-navbar">
     <!-- container -->
@@ -1035,7 +1035,7 @@
     <!-- /container -->
   </footer>
   <!-- /Footer -->
-
+  </div>
   <!-- jQuery Plugins -->
   <script src="js/jquery.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
