hamburger background-color fixed

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -76,7 +76,7 @@
         <!-- /Logo -->
 
         <!-- Mobile toggle -->
-        <button class="navbar-toggle">
+        <button class="navbar-toggle hamburger">
           <i class="fa fa-bars"></i>
         </button>
         <!-- /Mobile toggle -->
