add companies for current sponsors

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -614,6 +614,30 @@
             <!--</div>-->
         <!--</div>-->
 
+  <!-- Current-Sponsors -->
+  <div id="sponsors" class="section">
+    <!-- container -->
+    <div class="container">
+      <div class="row">
+        <div class="section-title">
+          <h3 class="title"><span style="color: #bd0c0e;">Sponsors</span></h3>
+        </div>
+        <div style="display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;">
+          <a href="https://rosenfeldmedia.com/" target="_blank" class="sponsor">
+            <img src="img/rosenfeld.jpg" alt="">
+          </a>
+          <a href="https://www.producthunt.com/" target="_blank" class="sponsor">
+            <img src="img/profucthunt-logo.png" alt="" style="width: 15rem;">
+          </a>
+        </div>
+      <!-- /row -->
+    </div>
+    <!-- /container -->
+  </div>
+  <!-- /Sponsors -->
 
   <!-- Previous-Sponsors -->
   <div id="sponsors" class="section">
@@ -700,16 +724,16 @@
             <img src="img/wwc.jpg" alt="">
           </a>
           <a href="https://zubi.io/" target="_blank" class="sponsor">
-            <img src="img/zubi.png" alt="">
+            <img src="img/zubi.png" alt="" style="width: 15rem;">
           </a>
           <a href="https://www.uxpin.com/" target="_blank" class="sponsor">
-            <img src="img/UXPin-Logo-BlackFill@2x.png" alt="">
+            <img src="img/UXPin-Logo-BlackFill@2x.png" alt="" style="width: 15rem;">
           </a>
           <a href="https://www.producthunt.com/" target="_blank" class="sponsor">
-            <img src="img/profucthunt-logo.png" alt="" style="width: 20rem;">
+            <img src="img/profucthunt-logo.png" alt="" style="width: 15rem;">
           </a>
           <a href="https://pomodoneapp.com/" target="_blank" class="sponsor">
-            <img src="img/pomodone-logo.png" alt="" style="width: 20rem;">
+            <img src="img/pomodone-logo.png" alt="" style="width: 15rem;">
           </a>
         </div>
       <!-- /row -->
