--- a/views/home.hbs
+++ b/views/home.hbs
@@ -620,7 +620,7 @@
     <div class="container">
       <div class="row">
         <div class="section-title">
-          <h3 class="title"><span style="color: #bd0c0e;">Sponsors</span></h3>
+          <h3 class="title"><span style="color:#000;">Our &nbsp;</span> <span style="color: #bd0c0e;">sponsors</span></h3>
         </div>
         <div style="display: flex;
     flex-wrap: wrap;
