logo image file changed

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -664,7 +664,7 @@
             <img src="img/agora.png" alt="">
           </a>
           <a href="https://balsamiq.com/" target="_blank" class="sponsor">
-            <img src="img/balsamiq-logo.png" alt="">
+            <img src="img/balsamiq.svg" alt="">
           </a>
           <a href="https://cloudsploit.com/" target="_blank" class="sponsor">
             <img src="img/cloudsploit-logo.png" alt="">
