--- a/views/home.hbs
+++ b/views/home.hbs
@@ -626,17 +626,23 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;">
-          <a href="https://rosenfeldmedia.com/" target="_blank" class="sponsor">
-            <img src="img/rosenfeld.jpg" alt="">
+          <a href="https://www.wolfram.com/" target="_blank" class="sponsor">
+            <img src="img/wolfram.jpg" alt="">
           </a>
-          <a href="https://www.producthunt.com/" target="_blank" class="sponsor">
-            <img src="img/profucthunt-logo.png" alt="" style="width: 15rem;">
+          <a href="https://www.sashido.io/en/" target="_blank" class="sponsor">
+            <img src="img/sashido.png" alt="">
+          </a>
+          <a href="https://interwebs.host/" target="_blank" class="sponsor">
+            <img src="img/interwebshost.png" alt="">
           </a>
           <a href="https://balsamiq.com/" target="_blank" class="sponsor">
             <img src="img/balsamiq.svg" alt="">
           </a>
-          <a href="https://www.wolfram.com/" target="_blank" class="sponsor">
-            <img src="img/wolfram.jpg" alt="">
+          <a href="https://www.producthunt.com/" target="_blank" class="sponsor">
+            <img src="img/profucthunt-logo.png" alt="" style="width: 15rem;">
+          </a>
+          <a href="https://rosenfeldmedia.com/" target="_blank" class="sponsor">
+            <img src="img/rosenfeld.jpg" alt="">
           </a>
         </div>
       <!-- /row -->
