--- a/views/home.hbs
+++ b/views/home.hbs
@@ -632,6 +632,15 @@
           <a href="https://www.sashido.io/en/" target="_blank" class="sponsor">
             <img src="img/sashido.png" alt="">
           </a>
+          <a href="https://www.echoar.xyz/" target="_blank" class="sponsor">
+            <img src="img/echoAR.png" alt="">
+          </a>
+          <a href="https://www.careernaksha.com/" target="_blank" class="sponsor">
+            <img src="img/CareerNaksha.jpeg" alt="">
+          </a>
+          <a href="https://www.axure.com/" target="_blank" class="sponsor">
+            <img src="img/axure.png" alt="">
+          </a>
           <a href="https://interwebs.host/" target="_blank" class="sponsor">
             <img src="img/interwebshost.png" alt="">
           </a>
