clerky logo added

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -653,6 +653,9 @@
           <a href="https://rosenfeldmedia.com/" target="_blank" class="sponsor">
             <img src="img/rosenfeld.jpg" alt="">
           </a>
+          <a href="https://www.clerky.com/" target="_blank" class="sponsor">
+            <img src="https://www.clerky.com/assets/images/logo-md-462f7222.svg" alt="" style="width: 15rem;">
+          </a>
         </div>
       <!-- /row -->
     </div>
