add event date in home page

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -137,7 +137,7 @@
                   width="20%">&nbsp;<span style="color: #bd0c0e">DOT</span><span style="color: black">SLASH</span><span style="color: black; margin-top: 1rem;"> 4.0</span></h1>
               <h4 class="lead" style="font-size: 25px;color: black; text-shadow:0 0 5px white;">Root to Ideas</h4>
               <h5 class="lead" style="font-size: 30px;color: black;">
-              <h3 class="lead" style="box-shadow: 3px 3px #5d5d5d;font-size: 20px;color: #bd0c0e;font-weight:600; border: 1px solid black; border-radius: 10px; padding: 10px;">Coming Soon!</h3>
+              <h3 class="lead" style="box-shadow: 3px 3px #5d5d5d;font-size: 20px;color: #bd0c0e;font-weight:600; border: 1px solid black; border-radius: 10px; padding: 10px;">30-31st January, 2021</h3>
               <h3 class="lead"><span style="font-size:20px">Powered by</span> <span style="font-weight: 600">ASHINE</span></h3>
               {{!-- <button class="" id="devfolio-apply-now1"><svg class="logo" xmlns="http://www.w3.org/2000/svg" fill="#fff"
                   viewBox="0 0 115.46 123.46" style="height:24px;width:24px;margin-right:8px">
