add mode-of-conduct in form

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1037,6 +1037,18 @@ button:not(:focus) {
   margin-top: 20px;
 }
 
+/*----------------------------*\
+	FORM 
+\*----------------------------*/
+
+.reason-text{
+  display: inline;
+}
+
+.select-wrapper+label{
+  font-size: 0.9rem !important;
+}
+
 /*=========================================================
 	CONTACT
 ===========================================================*/
